# MQWorkerService

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: cd.yml
src/MQWorkerService/: main.py
