[project]
name = "MQWorkerService"
version = "0.1.0"
description = "A micro service for handeling publishing to rabbitMQ + calculations and updating the database"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dynamic-frcm>=1.0.2",
    "pika>=1.3.2",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
]
